crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_Y79Y__000.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/000
input: "foo: |\n\t\nbar: 1\n"
diagnostics:
YAML_PARSE_UNEXPECTED_INDENT:tab character used as indentation is not allowed in YAML@7..8
cst:
