crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_Y79Y__007.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/007
input: "? -\n:\t-\n"
diagnostics:
YAML_PARSE_UNEXPECTED_INDENT:tab character used as indentation is not allowed in YAML@5..6
cst:
