crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_Y79Y__009.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: Y79Y/009
input: "? key:\n:\tkey:\n"
diagnostics:
YAML_PARSE_UNEXPECTED_INDENT:tab character used as indentation is not allowed in YAML@8..9
cst:
